# tight_binding

./: LICENSE-MIT  pyproject.toml
resources/unit_cells/: CsPbI3.json
src/tight_binding/: model.py  objects.py  slaterkoster.py  spin_orbit.py
tests/: test_single_perovskite.py
