[project]
name = "tight_binding"
version = "0.1.0"
authors = [
  { name="Daniel Voogsgerd", email="daniel@voogsgerd.nl" }
]
description = "A toolset for tight binding (LCAO) models"
readme = "README.md"
requires-python = ">3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "sympy >= 1.6",
    "numpy >= 1.19"
]

[project.optional-dependencies]
dev = [
    "mypy ~= 1.1.1",
]
test = [
    "coverage[toml]",
    "tox",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/DanielVoogsgerd/TightBinding"
"Bug Tracker" = "https://github.com/DanielVoogsgerd/TightBinding/issues"

# [options]
# install_requires =
#     sympy
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_errors = true
follow_imports = "skip"
